--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -494,15 +494,16 @@ nav .down li {
 
 .footer footer .row .col .links .link {
   padding: 15px 20px;
-  margin: 0 10px 0 0;
+  margin: 20px 20px 0 0;
   background: #3A3C4C;
 }
 
 .footer footer .row .col input {
   padding: 15px 20px;
   height: 50px;
-  background: url(../img/Arrow.png) no-repeat white 180px;
+  background: url(../img/Arrow.png) no-repeat white 270px;
   border: 0;
+  min-width: 300px;
 }
 
 .footer footer .row-2 .col {
